src/objects/Contact_history__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact History Trackings</relationshipLabel>
        <relationshipName>Contact_History_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailNew__c</fullName>
        <label>EmailNew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailOld__c</fullName>
        <label>EmailOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstNameNew__c</fullName>
        <label>FirstNameNew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstNameOld__c</fullName>
        <label>FirstNameOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastNameNew__c</fullName>
        <label>LastNameNew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastNameOld__c</fullName>
        <label>LastNameOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNew__c</fullName>
        <label>PhoneNew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneOld__c</fullName>
        <label>PhoneOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact History Tracking</label>
    <nameField>
        <label>Contact history Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>